kubernetes/test-server/test-server-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: test-server
  name: test-server
spec:
  selector:
    matchLabels:
      app: test-server
  template:
    metadata:
      labels:
        app: test-server
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              ##- key: node-role.kubernetes.io/worker
              ##  operator: Exists
              - key: kubernetes.io/os
                operator: In
                values:
                - linux
      containers:
      - command:
        - sleep
        - infinity
        image: drtuxwang/debian-ops:stable
        imagePullPolicy: IfNotPresent
        name: test-server
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 1024M
          requests:
            cpu: 100m
            memory: 64M
        volumeMounts:
        - mountPath: /shared
          name: shared
      nodeSelector:
        kubernetes.io/os: linux
        ##kubernetes.io/hostname: ryzen.local
      terminationGracePeriodSeconds: 10
      volumes:
      - hostPath:
          path: /shared
        name: shared
