kubernetes/test-server/test-server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: test-server
  name: test-server
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          ##- key: node-role.kubernetes.io/worker
          ##  operator: Exists
          - key: kubernetes.io/os
            operator: In
            values:
            - linux
  containers:
  - command:
    - sleep
    - infinity
    image: drtuxwang/debian-bash:stable
    imagePullPolicy: IfNotPresent
    name: test-server
    ports:
    - containerPort: 80
      protocol: TCP
    resources:
      limits:
        cpu: 1000m
        memory: 1024M
      requests:
        cpu: 100m
        memory: 64M
    volumeMounts:
    - mountPath: /shared
      name: shared
  nodeSelector:
    kubernetes.io/os: linux
    ##kubernetes.io/hostname: ryzen.local
  restartPolicy: Never
  volumes:
  - hostPath:
      path: /shared
    name: shared
