kubernetes/test-server/test-server-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-server
  name: test-server-headless
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: test-server
  type: ClusterIP
