kubernetes/test-server/test-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-server
  name: test-server
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: test-server
  type: ClusterIP
