kubernetes/test-server/test-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-server
spec:
  rules:
  - host: test-server.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: test-server
          servicePort: 80
  tls:
  - secretName: example.com
